# cxx-utils

./: CLAUDE.md  CMakeLists.txt  CMakePresets.json
.claude/: settings.local.json
include/: pnext_range.hpp
tests/: CMakeLists.txt  test_pnext_range.cpp
